--- a/views/patientconsult.ejs
+++ b/views/patientconsult.ejs
@@ -190,9 +190,9 @@
         <div class="logo">YOUR LOGO</div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Consult</a></li>
-                <li><a href="#">Pharmacy</a></li>
+                <li><a href="/patient/main">Home</a></li>
+                <li><a href="/patient/main/consult">Consult</a></li>
+                <li><a href="/patient/getmed">Pharmacy</a></li>
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
             </ul>
         </nav>
