--- a/public/welcome.css
+++ b/public/welcome.css
@@ -4,8 +4,6 @@ body {
     padding: 0;
     background-color: #faf9fc; 
     color: #333; 
-    margin: 0%;
-    padding: 0%;
 }
 
 header {
@@ -24,39 +22,43 @@ header {
     font-size: 1.5em;
     font-weight: bold;
 }
-nav  {
-    width: 450px;
+.navbar{
+    width: 422px;
     /* margin-right: 50px; */
+    /* border: 2px solid red; */
+    margin: 0 5px;
 }
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    
-}
-
-nav li {
-    margin-left: 20px;
-    i{
-        font-size: 25px;
-        height: 25px;
-        width: 25px;
-        cursor: pointer;
+.btn1{
+    a{
+        text-decoration: none;
+        color: white;
     }
+    font-size: 23px;
+    padding: 10px 20px;
+    border: 3px solid #1B3C74;
+    border-radius: 10px;
+    background-color: #1B3C74;
+    cursor: pointer;
 }
-nav li a:hover{
-    border-bottom: 2px solid #2b2b2b;
-    padding-bottom: 10px;
+.btn1:hover{
+    background-color: #1b3c74e5;
 }
-
-nav a {
-    text-decoration: none;
-    color: #333;
-    font-weight: 450;
-    font-size: 22px;
+.btn2{
+    a{
+        text-decoration: none;
+        color: #1B3C74;
+    }
+    font-size: 23px;
+    padding: 10px 20px;
+    border: 3px solid #1b3c74;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.btn2:hover{
+    background-color: #1b3c74ab;
+    a{
+        color: white;
+    }
 }
 
 .hero {
@@ -216,67 +218,6 @@ nav a {
     /* text-align: center; */
     /* position: relative; */
     /* left: 70px; */
-}
-@media (max-width:649px) and (min-width:344px) {
-    body{
-        overflow-x: hidden;
-    }
-    .logo{
-        display: none;
-    }
-    .navbar{
-        display: none;
-    }
-    .newheader{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width:100%;
-        /* border: 2px solid red; */
-    }
-    .nav{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        width: 100%;
-    }
-    .nav i{
-        font-size: 35px;
-        cursor: pointer;
-    }
-    .menu{
-        position: absolute;
-        background-color: rgba(255, 255, 255, 0.5);
-        width: 35%;
-        right: -35%;
-        top: 0;
-        height: 100%;
-        backdrop-filter: blur(10px);
-        color: black;
-        padding: 50px 10px;
-        font-size: 30px;
-        z-index: 10;
-        overflow: hidden;
-        display: none;
-    }
-    .menu i{
-        position: absolute;
-        top: 30px;
-        right: 30px;
-        cursor: pointer;
-    }
-    .menu h3{
-        padding-top: 20px;
-        a{
-            font-size: 20px;
-            color: black;
-            text-decoration: none;
-        }
-        margin: 0;
-    }
-    .menu h3:hover{
-        scale: 1.05;
-    }
 }
 @media (max-width:1300px) and (min-width:1000px) {
     .hero{
@@ -508,6 +449,9 @@ nav a {
     }
 }
 @media (max-width:800px) and (min-width:600px) {
+    .navbar{
+        scale: 0.8;
+    }
     .hero{
         flex-direction: column;
     }
@@ -655,6 +599,9 @@ nav a {
 @media (max-width:600px) and (min-width:450px) {
     body{
         overflow-x: hidden;
+    }
+    .navbar{
+        scale: 0.5;
     }
     .hero{
         flex-direction: column;
