--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,105 +4,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MediConnect - Profile</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/profile.css">
+    
 </head>
-
 <script src="/socket.io/socket.io.js"></script>
 <script>
     const socket = io();
 </script>
 
-<style>
-    body {
-        width: 100vw;
-        margin: 0px;
-        padding: 0px;
-        font-family: Arial, Helvetica, sans-serif;
-    }
-
-    nav {
-        width: 100vw;
-        height: 50px;
-        background-color: black;
-        color: white;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-    }
-
-    button {
-        background-color: transparent;
-        color: white;
-        font-size: 20px;
-        border: 0px;
-    }
-
-    a {
-        margin-right: 10px;
-    }
-
-    #logout {
-        background-color: red;
-        padding: 10px;
-        border-radius: 5px;
-    }
-
-    nav>div {
-        display: flex;
-        padding: 10px;
-        align-items: center;
-    }
-
-    div.img{
-        display: flex;
-        justify-content: center;
-        margin-top:100px;
-    }
-
-    img{
-        width:200px;
-        height:200px;
-        border: 2px solid;
-        border-radius: 100px;
-    }
-
-    #pic{
-        color:white;
-        padding: 10px;
-        background-color: blue;
-    }
-
-
-.fileupload{
-    display: none;
-}
-.changepic{
-    display: flex;
-    justify-content: center;
-}
-</style>
 
 <body>
-    <nav>
-        <h1>DoctorProfile</h1>
-        <div>
-            <a href="/doctor/dhome"><button>Home</button></a>
-            <button id="logout" onclick="logout()">logout</button>
+    <header class="header">
+        <div class="logo">YOUR LOGO</div>
+        <nav>
+            <ul>
+                <li><a href="/doctor/dhome">Home</a></li>
+                <li><a href="">History</a></li>
+                <li><a href="">Reviews</a></li>
+                <li><i class='bx bx-user-circle'></i></li>
+            </ul>
+        </nav>
+    </header>
+
+    <div class="profile-container">
+        <div class="banner">
+            <img src="/phealth.jpg" alt="Healthcare Background">
         </div>
-    </nav>
-
-
-    <div class="img">
-<label for="changeimage"><img src=<%=pic%> alt=""></label>
-<input type="file" id="changeimage" class="fileupload">
-
-
-
+        <div class="profile-content">
+            <!-- <div class="profile-pic">
+                <img src="images/profile_pic.png" alt="Profile Picture">
+            </div> -->
+            <div class="img">
+                <label for="changeimage"><img src=<%=doc.profilepic%> alt=""></label>
+                <input style="display: none;" type="file" id="changeimage" class="fileupload">
+            </div>            
+            <div class="profile-info">
+                <h2></h2>
+                <p><strong>Experience:</strong><%=doc.info[0].experience%></p>
+                <p><strong>PhoneNumber:</strong><%=doc.info[0].phonenumber%></p>
+                <p>Currently working in <strong><%=doc.info[0].Hospitals%></strong></p>
+            </div>
+            <div class="changepic"><button onclick="upload()" id="pic">Change pic</button>
+                <button id="logout"class="logout" onclick="logout()">logout</button></div>
+          
+        </div>
+        <div class="description">
+            <div class="input-container">
+                <textarea id="description" placeholder="Description:"></textarea>
+                <span class="edit-icon">✎</span>
+            </div>
+        </div>
     </div>
-    <div class="changepic"><button onclick="upload()" id="pic">Change pic</button></div>
-    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js" integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="profile.js"></script>
 </body>
-
 <script>
     async function decode() {
         try {
@@ -204,7 +164,7 @@ async function cloudname(){
                 if (res.secure_url) {
                     console.log('File uploaded successfully:', res.secure_url);
                     alert('File uploaded successfully!');
-                    const ele=document.getElementsByTagName('img')[0]
+                    const ele=document.getElementsByClassName('img')[0].getElementsByTagName('img')[0]
                     ele.src=res.secure_url
                     const r=await dbupload(res.secure_url)
                     .then((r)=>{
