--- a/views/patientmain.ejs
+++ b/views/patientmain.ejs
@@ -12,6 +12,64 @@
     rel="stylesheet">
 
   <link rel="stylesheet" href="/patientmain.css" />
+
+  <style>
+    .nextpage {
+      height: 60vh;
+      background-color: black;
+    }
+
+    #motion {
+      height: 100vh;
+      width: 66%;
+      position: fixed;
+      /* top: 20%; */
+      top: 6%;
+      right: 0px;
+    }
+
+    .leftbox {
+      width: 34%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .nextnextpage {
+      height: 200vh;
+      background-color: black;
+    }
+
+    .box {
+      border: 2px solid black;
+      width: 75%;
+      padding-top: 35px;
+      padding-bottom: 85px;
+      padding-left: 35px;
+      padding-right: 50px;
+      margin-bottom: 50px;
+      position: relative;
+      border-radius: 20px;
+    }
+    .boxcontent{
+      text-align: center;
+      width: 100%;
+    }
+    .boxcontent h1 {
+      font-size: 1.7rem;
+      color: rgb(151, 151, 151);
+    }
+
+    .boxcontent p {
+      margin-top: 25px;
+      font-size: 1.2rem;
+      width: 75%;
+      color: lightgrey;
+      width: 100%;
+    }
+  </style>
 </head>
 
 <body>
@@ -19,7 +77,7 @@
     <div class="logo">YOUR LOGO</div>
     <nav>
       <ul>
-        <li id="home"><a  href="">Home</a></li>
+        <li id="home"><a href="">Home</a></li>
         <!-- <li><a href="#">Profile</a></li> -->
         <li><a href="/patient/main/consult">Consult</a></li>
         <li><a href="/patient/getmed">Pharmacy</a></li>
@@ -28,19 +86,19 @@
     </nav>
     <div class="newheader">
       <div class="nav">
-          <div class="logoimg">YOUR LOGO</div>
-          <div id="menubtn">
-              <i class="ri-menu-line"></i>
-          </div>
+        <div class="logoimg">YOUR LOGO</div>
+        <div id="menubtn">
+          <i class="ri-menu-line"></i>
+        </div>
       </div>
       <div class="menu">
-          <i class="ri-close-line"></i>
-          <h3 id ="home"><a  href="">Home</a></h3>
-          <h3><a href="/patient/main/consult">Consult</a></h3>
-          <h3><a href="/patient/getmed">Pharmacy</a></h3>
-          <h3><a href="">Search</a></h3>
+        <i class="ri-close-line"></i>
+        <h3 id="home"><a href="">Home</a></h3>
+        <h3><a href="/patient/main/consult">Consult</a></h3>
+        <h3><a href="/patient/getmed">Pharmacy</a></h3>
+        <h3><a href="">Search</a></h3>
       </div>
-  </div>
+    </div>
   </header>
 
   <section class="hero">
@@ -105,10 +163,57 @@
       </div>
     </div>
   </section>
+
+
+
+
+  <div class="nextpage">
+
+    <div id="motion">
+      <spline-viewer url="https://prod.spline.design/Bhpm7Vc05T5b6-JX/scene.splinecode"></spline-viewer>
+      <!-- <spline-viewer url="https://prod.spline.design/S4xNoYVyS-GEcos5/scene.splinecode"></spline-viewer> -->
+    </div>
+    <div class="boxs">
+
+    </div>
+  </div>
+  <div class="nextnextpage">
+    <div class="leftbox">
+      <div class="box box1">
+        <div class="boxcontent">
+          <h1>Enhance Your Healthcare Experience</h1>
+          <p>Connect with experienced doctors, get medical advice, and manage your health with ease. Our platform
+            fosters seamless doctor-patient interaction, ensuring timely consultations, expert guidance, and better
+            healthcare outcomes.</p>
+
+        </div>
+      </div>
+      <div class="box box2">
+        <div class="boxcontent">
+          <h1>Consult with Experts</h1>
+          <p>Our platform connects you with experienced doctors for consultations, health advice, and medical insights.
+            Stay informed about the latest healthcare advancements and receive expert guidance tailored to your needs.
+          </p>
+
+        </div>
+      </div>
+      <div class="box box3">
+        <div class="boxcontent">
+          <h1>Manage Your Health Records</h1>
+          <p>Keep track of your medical history, prescriptions, and reports in one place. Our platform allows seamless
+            record management, ensuring doctors have the information they need for accurate diagnoses and better
+            treatment.</p>
+
+        </div>
+      </div>
+    </div>
+
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
     integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+  <script type="module" src="https://unpkg.com/@splinetool/viewer@1.9.59/build/spline-viewer.js"></script>
   <script src="/patientmain.js"></script>
 </body>
 
