--- a/public/patientlogin.css
+++ b/public/patientlogin.css
@@ -18,13 +18,14 @@ body {
 }
 .container {
     width: 500px;
-    height: 500px;
+    height: 520px;
     /* margin: 100px auto; */
     perspective: 1000px;
     /* border: 2px solid red; */
     /* background-color: #f0f0f0; */
     background-color: transparent;
     border-radius: 20px;
+
 }
 
 .form-wrapper {
@@ -61,6 +62,7 @@ body {
         margin-top: 30px;
     }
     form{
+       
         position: relative;
         top: 55px;
         display: flex;
@@ -109,12 +111,14 @@ body {
         text-align: center;
         position: relative;
         top: 115px;
+        font-size: 20px;
     }
 }
 
 .signup-form{
     transform: rotateY(180deg);
     color: white;
+    min-height: 130px;
     h1{
         text-align: center;
         font-size: 45px;
@@ -168,7 +172,8 @@ body {
     p{
         text-align: center;
         position: relative;
-        top: 70px;
+        top: 50px;
+        font-size: 20px
     }
 }
 #webgl-canvas {
