--- a/views/doctorlogin.ejs
+++ b/views/doctorlogin.ejs
@@ -1,116 +1,72 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MediConnect-Login into the website</title>
+    <link rel="stylesheet" href="/login.css">
+    <script defer type="module" src="main.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <style>
-    body {
-        overflow-x: hidden;
-        width: 100vw;
-        height: 100vh;
-        margin: 0px;
-        padding: 0px;
-        font-family: Arial, Helvetica, sans-serif;
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-    }
 
-    div {
-        width: 300px;
-    }
-
-    form {
-        border: 1px solid black;
-        border-radius: 5px;
-        height: 60%;
-        width: 300px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 10px;
-    }
-
-    button {
-        border: 1px solid;
-        border-radius: 15px;
-        background-color: black;
-        color: white;
-        height: 40px;
-        width: 100%;
-        margin-top: 2px;
-    }
-
-    input {
-        padding: 15px;
-        border: 1px solid black;
-        border-radius: 5px;
-    }
-
-    .google{
-        padding:10px;
-        margin-top: 10px;
-        text-decoration: none;
-        font-size: larger;
-        border:2px solid black;
-        border-radius: 4px;
-        display: flex;
-        align-items: center;
-
-    }
-
-    .google img{
-        width:30px;
-        height:30px;
-        margin-left:40px;
-        
-    }
-    p {
-        border: 0;
-        height: 2px;
-        background-color: black;
-    }
-
-    label{
-        margin:10px;
-    }
-
+iframe{
+    
+    height: 100vh;
+    width: 100vw;
+    z-index:-1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+}
 </style>
-
-
 <body>
-    <h1>Doctor-Validation</h1>
-    <form action="/doctor/logindata" method="POST" enctype="application/x-www-form-urlencoded">
-        <h1>Login</h1>
-        <label for="mail">Email</label>
-        <input type="text" width=50 id="mail" name="email" required placeholder="Enter your email...">
-        <label for="pass">Password</label>
-        <input type="text" width=50 id="pass" name="password" required placeholder="Enter your password...">
-        <button type="submit">Continue</button>
-    </form>
-    <div>
-        <a class="google" href="/auth/google">Login With Google <img src="/search.png" alt=""></a>
+    <!-- <canvas id="webgl-canvas">
+        
+    </canvas> -->
+    <iframe src='https://my.spline.design/untitled-9c0f02d0c857e9c18b3f5d477b0c922e/' frameborder='0' width='100%' height='100%'></iframe>
+    
+    <div class="container">
+        <div class="form-wrapper" id="formWrapper">
+            <div class="form-side login-form">
+                <h1>LOG IN</h1>
+                <form enctype="application/x-www-form-urlencoded" method="POST" action="/doctor/logindata">
+                    <div class="inpdiv">
+                        <input type="text" placeholder="Enter Email address" name="email" required>
+                    </div>
+                    <div class="inpdiv">
+                        <input type="password" placeholder="Enter password" name="password" required>
+                    </div>
+                    <button class="subbtn" type="submit">Submit</button>
+                </form>
+                <p>DON'T HAVE AN ACCOUNT? <a href="#" id="signupLink">SIGN UP</a></p>
+            </div>
+            <div class="form-side signup-form">
+                <h1>SIGN UP</h1>
+                <form id="signupForm">
+                    <div class="inpdiv">
+                        <input type="text" placeholder="Enter username" name="username" required>
+                    </div>
+                    <div class="inpdiv">
+                        <input type="email" placeholder="Enter email" name="email" required>
+                    </div>
+                    <div class="inpdiv">
+                        <input type="password" placeholder="Enter password" name="password" id="password" required>
+                    </div>
+                    <div class="inpdiv">
+                        <input type="password" placeholder="Confirm password" name="cfmpassword" id="cfmpassword"
+                            required>
+                    </div>
+                    <button class="subbtn" type="submit">Sign up</button>
+                </form>
+                <p>ALREADY HAVE AN ACCOUNT? <a href="#" id="loginLink">LOG IN</a></p>
+            </div>
+        </div>
     </div>
-
-
-
+    <script src="/login.js"></script>
 
 </body>
-<script>
-    document.querySelector('form').addEventListener('submit', function (event) {
-        var email = document.querySelector('#mail').value;
-        console.log("Email submitted:", email);
-    });
-</script>
-
-<script src="/sendalert.js"></script>
-
-
-
 
 </html>
